# srt_labs

./: .gitignore  README.md
lab1/: CMakeLists.txt  L1-altynai.docx
lab1/src/: exercise1.cpp  exercise1.h  exercise2.cpp  exercise2.h  exercise3.cpp  exercise3.h  main.cpp
lab2/: CMakeLists.txt  L2-altynai.docx  L2.docx
lab2/src/: main.cpp
lab3/: CMakeLists.txt  L3-altynai.docx
lab3/src/: main.cpp
lab4/: CMakeLists.txt  L4-altynai.docx
lab4/src/: main.cpp
lab5/: CMakeLists.txt  L5-altynai.docx
lab5/src/: main.cpp
lab6/: CMakeLists.txt  L6-altynai.docx
lab6/src/: exercise1.cpp  exercise2.cpp
lab7/: .~lock.L7-altynai.docx#  L7-altynai.docx
lab7/lab_tcp/: CMakeLists.txt  TCPClient.cpp  TCPServer.cpp
lab7/lab_udp/: CMakeLists.txt  UDPClient.cpp  UDPServer.cpp
